--- a/Views/Projects/Proj.cshtml
+++ b/Views/Projects/Proj.cshtml
@@ -44,7 +44,7 @@
     <div class="col s12 m5">
         <br><br>
         <p class="caption">
-            The Medium Card limits the height of the card to 400px.
+            The Medium Card limits the height of the card to 400px..
         </p>
     </div>
 </div>
