--- a/Views/Projects/Proj.cshtml
+++ b/Views/Projects/Proj.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewData["Title"]</h2>
 
 <div class="parallax-container">
-    <div class="parallax"><img src="http://materializecss.com/images/parallax1.jpg"></div>
+    <div class="parallax"><img src="~/images/7.37House and Studio/7.37House and Studio    (2).jpg"></div>
 </div>
 <div class="section white">
     <div class="row container">
@@ -54,28 +54,28 @@
 <div class="slider">
     <ul class="slides">
       <li>
-        <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+        <img src="~/images/7.37House and Studio/7.37House and Studio    (2).jpg"> <!-- random image -->
         <div class="caption center-align">
           <h3>This is our big Tagline!</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
+        <img src="~/images/7.37House and Studio/7.37House and Studio    (3).jpg"> <!-- random image -->
         <div class="caption left-align">
           <h3>Left Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
+        <img src="~/images/7.37House and Studio/7.37House and Studio    (4).jpg"> <!-- random image -->
         <div class="caption right-align">
           <h3>Right Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
+        <img src="~/images/7.37House and Studio/7.37House and Studio    (5).jpg"> <!-- random image -->
         <div class="caption center-align">
           <h3>This is our big Tagline!</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
