--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -3,82 +3,41 @@
 @{
     ViewData["Title"] = "Projects";
 }
-<h2>@ViewData["Title"]</h2>
+<!--<h2>@ViewData["Title"]</h2>-->
 
 
-<div class="parallax-container">
-    <div class="parallax"><img src="~/images/7.37House and Studio/7.37House and Studio    (2).jpg"></div>
-</div>
-<div class="section white">
-    <div class="row container">
-    <h2 class="header">Parallax</h2>
-    <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
-    </div>
-</div>
-<div class="parallax-container">
-    <div class="parallax"><img src="http://materializecss.com/images/parallax2.jpg"></div>
-</div>
-<div class="section white">
-    <div class="row container">
-    <h2 class="header">Parallax</h2>
-    <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
-    </div>
+<div style="display: block; margin: 0 auto; text-align: center">
+    <img class="responsive-img" src="~/images/THE PAUSE   (19).jpg" width="80%">
 </div>
 
+      
 
-
-<div class="row">
-    <div class="col s12 m12 l12">
-        <h4 class="light">Purple Lisa</h4>
-        <div class="card large">
-            <div class="card-image">
-                <img src="http://materializecss.com/images/sample-1.jpg">
-                <span class="card-title">Purple Lisa</span>
-            </div>
-            <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-                <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
-            </div>
-        </div>
-    </div>
-    <div class="col s12 m5">
-        <br><br>
-        <p class="caption">
-            The Medium Card limits the height of the card to 400px..
-        </p>
-    </div>
-</div>
-
-
-
+<!--
 <div class="slider">
     <ul class="slides">
       <li>
-        <img src="~/images/7.37House and Studio/7.37House and Studio    (2).jpg"> <!-- random image -->
+        <img src="~/images/7.37House and Studio/7.37House and Studio    (2).jpg"> 
         <div class="caption center-align">
           <h3>This is our big Tagline!</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="~/images/7.37House and Studio/7.37House and Studio    (3).jpg"> <!-- random image -->
+        <img src="~/images/7.37House and Studio/7.37House and Studio    (3).jpg"> 
         <div class="caption left-align">
           <h3>Left Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="~/images/7.37House and Studio/7.37House and Studio    (4).jpg"> <!-- random image -->
+        <img src="~/images/7.37House and Studio/7.37House and Studio    (4).jpg"> 
         <div class="caption right-align">
           <h3>Right Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="~/images/7.37House and Studio/7.37House and Studio    (5).jpg"> <!-- random image -->
+        <img src="~/images/7.37House and Studio/7.37House and Studio    (5).jpg"> 
         <div class="caption center-align">
           <h3>This is our big Tagline!</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -86,3 +45,23 @@
       </li>
     </ul>
   </div>
+  -->
+
+<div class="container">
+    <div class="center-align">
+        <div class="row">
+            <div class="col m6 right-align"  style="">
+                <img class="responsive-img" src="~/images/2.jpg" width="100px">
+            </div>
+            <div class="col m6 ">
+                <div class="row" style="vertical-align:text-bottom ;margin-bottom: 0px">
+                        <h5 class="left-align" style="text-align: justify;letter-spacing: 7px">COMING SOON</h5>
+                </div>
+                <div class="row" style="vertical-align:text-top ">
+                        <h5 class="left-align" style="text-align: justify;padding: 0px;margin-top: 0px">ASHARI ARCHITECTS</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+  
