After few git reset head^

--- a/Views/Projects/Cards.cshtml
+++ b/Views/Projects/Cards.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Sample Card";
 }
-<h2>@ViewData["Title"]</h2>
+<h2>@ViewData["Message"]</h2>
 
 
 <div class="container">
