--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -5,47 +5,73 @@
 }
 <!--<h2>@ViewData["Title"]</h2>-->
 
-
+<!--
 <div style="display: block; margin: 0 auto; text-align: center">
     <img class="responsive-img" src="~/images/THE PAUSE   (19).jpg" width="80%">
 </div>
-
+-->
       
 
-<!--
+
 <div class="slider">
     <ul class="slides">
       <li>
-        <img src="~/images/7.37House and Studio/7.37House and Studio    (2).jpg"> 
-        <div class="caption center-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-        </div>
+        <a href="Projects/Cards/maternal_house">
+            <img src="~/images/Maternal - House ( خانه مادری )/Main elevation/008.jpg"> 
+            <div class="caption center-align">
+                <h3>MATERNAL HOUSE</h3>
+                <h6 class="light grey-text text-lighten-3">-CLICK TO LEARN MORE-</h6>
+            </div>
+        </a>
       </li>
       <li>
-        <img src="~/images/7.37House and Studio/7.37House and Studio    (3).jpg"> 
+          <a href="Projects/Cards/conex_cafe">
+        <img src="~/images/conex cafe/conex cafe   (12).jpg"> 
         <div class="caption left-align">
-          <h3>Left Aligned Caption</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h3>CONEX CAFE</h3>
+          <h6 class="light grey-text text-lighten-3">-CLICK TO LEARN MORE-</h6>
         </div>
+        </a>
       </li>
       <li>
-        <img src="~/images/7.37House and Studio/7.37House and Studio    (4).jpg"> 
-        <div class="caption right-align">
-          <h3>Right Aligned Caption</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-        </div>
+        <a href="Projects/Cards/nori_house">
+            <img src="~/images/Nouri House/NORI HOUSE   (16).JPG"> 
+            <div class="caption right-align">
+            <h3>NORI HOUSE</h3>
+            <h6 class="light grey-text text-lighten-3">-CLICK TO LEARN MORE-</h6>
+            </div>
+        </a>
       </li>
       <li>
-        <img src="~/images/7.37House and Studio/7.37House and Studio    (5).jpg"> 
+          <a href="Projects/Cards/cafe_mosalas">
+        <img src="~/images/Cafe Mosalas/Cafe Mosalas (4).JPG"> 
         <div class="caption center-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h3>CAFE MOSALAS</h3>
+          <h6 class="light grey-text text-lighten-3">-CLICK TO LEARN MORE-</h6>
+        </div>
+        </a>
+      </li>
+      <li>
+          <a href="Projects/Cards/falah_house">
+        <img src="~/images/Falah House/Falah House (1).jpg"> 
+        <div class="caption left-align">
+          <h3>FALAH HOUSE</h3>
+          <h6 class="light grey-text text-lighten-3">-CLICK TO LEARN MORE-</h6>
+        </div>
+        </a>
+      </li>
+      <li>
+          <a href="/Projects/Cards/hafezieh_prayer_room">
+        <img src="~/images/Hafezieh Prayer Room/render/hafezieh prayer room   (2).jpg"> 
+        <div class="caption right-align">
+          <h3>HAFEZIEH PRAYER ROOM</h3>
+          <h6 class="light grey-text text-lighten-3">-CLICK TO LEARN MORE-</h6>
         </div>
       </li>
+      </a>
     </ul>
   </div>
-  -->
+  
 
 <div class="container">
     <div class="center-align">
