--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -15,6 +15,15 @@
 
 <div class="slider">
     <ul class="slides">
+        <li>
+        <a href="Projects/Cards/the_pause">
+            <img src="~/images/PIC/THE PAUSE   (19).jpg"> 
+            <div class="caption center-align">
+                <h3>THE PAUSE</h3>
+                <h6 class="light grey-text text-lighten-3">-CLICK TO LEARN MORE-</h6>
+            </div>
+        </a>
+      </li>
       <li>
         <a href="Projects/Cards/maternal_house">
             <img src="~/images/Maternal - House ( خانه مادری )/Main elevation/008.jpg"> 
