removed coming soon

--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -2,16 +2,7 @@
 
 @{
     ViewData["Title"] = "Projects";
-}
-<!--<h2>@ViewData["Title"]</h2>-->
-
-<!--
-<div style="display: block; margin: 0 auto; text-align: center">
-    <img class="responsive-img" src="~/images/THE PAUSE   (19).jpg" width="80%">
-</div>
--->
-      
-
+}  
 
 <div class="slider">
     <ul class="slides">
@@ -81,22 +72,7 @@
     </ul>
   </div>
   
-
-<div class="container">
-    <div class="center-align">
-        <div class="row">
-            <div class="col m6 right-align"  style="">
-                <img class="responsive-img" src="~/images/2.jpg" width="100px">
-            </div>
-            <div class="col m6 ">
-                <div class="row" style="vertical-align:text-bottom ;margin-bottom: 0px">
-                        <h5 class="left-align" style="text-align: justify;letter-spacing: 7px">COMING SOON</h5>
-                </div>
-                <div class="row" style="vertical-align:text-top ">
-                        <h5 class="left-align" style="text-align: justify;padding: 0px;margin-top: 0px">ASHARI ARCHITECTS</h5>
-                </div>
-            </div>
-        </div>
-    </div>
+<div>
+    <img class="responsive-img" src="~/images/2.jpg" width="100px">
+    <h5 class="left-align">ASHARI ARCHITECTS</h5>
 </div>
-  
